Queries/Mutations Added
Queries for all notes, a single exact note, or all notes matching a provided word.

A single mutation to add a new note or edit an existing note.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
     "python.pythonPath": "C:\\Users\\knoxv\\.virtualenvs\\codyger-python-GoGMm3sd\\scripts\\python.exe",
-    "python.linting.enabled": false
+    "python.linting.enabled": false,
+    "python.formatting.provider": "black"
 }
